fixed portfolio css so that images align with header

--- a/css/portfolio-style.css
+++ b/css/portfolio-style.css
@@ -107,6 +107,11 @@ p {
     margin-bottom: 80px;
 }
 
+.images-container {
+    position: relative;
+    left: -20px;
+}
+
 img {
     width: 300px;
     height: 300px;
